Added swagger comments in routes for more api details.
