# server/routes/user.route.js
@@ -4,6 +4,6 @@ const auth = require("../middlewares/auth");
 const router = express.Router();
 
 //api/user/userdata
-router.get("/userdata", auth(), userController.getUserdata);
+router.get("/getuserdata", auth(), userController.getUserdata);
 
 module.exports = router;
