# server/utils/swagger.json
@@ -14,9 +14,79 @@
     "/auth/register": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "Register params",
+            "in": "body",
+            "description": "Json data required to register a user",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "jhondoe123"
+                }
+              }
+            },
+            "required": true
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Reponsds with registered user info",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "string",
+                      "example": "jhondoe@gmail.com"
+                    },
+                    "password": {
+                      "type": "string",
+                      "example": "$2b$10$3DMTCEG/TGwkQt6AgW7tteUlw4HmBkZ5k5z5WJzt0lKbbVLZulNwi"
+                    },
+                    "firstName": {
+                      "type": "string",
+                      "example": "jhon"
+                    },
+                    "lastName": {
+                      "type": "string",
+                      "example": "deo"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "660be614ed71f2b5991db5aa"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -24,9 +94,83 @@
     "/auth/signin": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "sigin params",
+            "in": "body",
+            "description": "Json data required to register a user",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "John"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "jhondoe123"
+                }
+              }
+            },
+            "required": true
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Reponsds with user info and token and sets a cookie with token",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "string",
+                      "example": "jhondoe@gmail.com"
+                    },
+                    "password": {
+                      "type": "string",
+                      "example": "$2b$10$3DMTCEG/TGwkQt6AgW7tteUlw4HmBkZ5k5z5WJzt0lKbbVLZulNwi"
+                    },
+                    "firstName": {
+                      "type": "string",
+                      "example": "jhon"
+                    },
+                    "lastName": {
+                      "type": "string",
+                      "example": "deo"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "660be614ed71f2b5991db5aa"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    }
+                  }
+                },
+                "token": {
+                  "type": "string",
+                  "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2MGJlNjE0ZmU3MWYyYjU5OTFkYjVhYSIsImlhdCI6MTcxMjA2NTk1NCwiZXhwIjoxNzEyMTUyMzU0fQ.ZXY5GFTYtmT7LqgYNMM_G9nO-F6wFBea4k-lL0mVimc"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -42,8 +186,49 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Reponsds with user info",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "string",
+                      "example": "jhondoe@gmail.com"
+                    },
+                    "password": {
+                      "type": "string",
+                      "example": "$2b$10$3DMTCEG/TGwkQt6AgW7tteUlw4HmBkZ5k5z5WJzt0lKbbVLZulNwi"
+                    },
+                    "firstName": {
+                      "type": "string",
+                      "example": "jhon"
+                    },
+                    "lastName": {
+                      "type": "string",
+                      "example": "deo"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "660be614ed71f2b5991db5aa"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2024-04-02T11:03:48.798Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -65,9 +250,9 @@
         }
       }
     },
-    "/userdata/userdata": {
+    "/user/getuserdata": {
       "get": {
-        "description": "",
+        "description": "getuserdata is a protected route, it requires authorization token to get a response",
         "parameters": [
           {
             "name": "authorization",
@@ -76,8 +261,28 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Reponsds with sensitive user info",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "jhon"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "deo"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "jhondoe@gmail.com"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
@@ -90,18 +295,43 @@
             "name": "animal_type",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Type of animal eg:- dog or cat"
           },
           {
             "name": "amount",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number",
+            "description": "Amount of records to be fetched"
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Reponsds with array of objects containing animal facts ",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "example": "1"
+                  },
+                  "text": {
+                    "type": "string",
+                    "example": "fact 1"
+                  },
+                  "type": {
+                    "type": "string",
+                    "example": "cat"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
